@@ -29,6 +29,8 @@ dependencies {
     implementation("org.flywaydb:flyway-core:10.17.0")
     implementation("org.flywaydb:flyway-database-postgresql:10.17.0")
     implementation("org.apache.poi:poi-ooxml:5.2.3")
+    implementation("org.slf4j:slf4j-api:2.0.7")
+    implementation("ch.qos.logback:logback-classic:1.4.11")
 }
 
 tasks.test {
@@ -42,3 +44,8 @@ application {
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
 }
+
+tasks.named<JavaExec>("run") {
+    jvmArgs = listOf("--enable-native-access=javafx.graphics")
+}
+
